--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,7 @@ spring.application.name=mycoolapp
 
 management.endpoints.web.exposure.include=health,info
 management.info.env.enabled=true
+
+info.app.name=My Super Cool App
+info.app.description=SUPPER COOL APP BRO
+info.app.version=1.0.0
