--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=mycoolapp
 
-management.endpoints.web.exposure.include=health,info
+management.endpoints.web.exposure.include=*
 management.info.env.enabled=true
 
 info.app.name=My Super Cool App
