--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@ spring.application.name=mycoolapp
 management.endpoints.web.exposure.include=*
 management.info.env.enabled=true
 
+management.endpoints.web.exposure.exclude=health,info
+
 info.app.name=My Super Cool App
 info.app.description=SUPPER COOL APP BRO
 info.app.version=1.0.0
