--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ management.endpoints.web.exposure.exclude=health,info
 info.app.name=My Super Cool App
 info.app.description=SUPPER COOL APP BRO
 info.app.version=1.0.0
+
+coach.name=Mickey Mouse
+team.name=The Mouse Club
